修复异常